--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="intro">
-        <h1>Hailie Jade Juliano</h1>
-        <h3>Aspiring Web Developer | Student</h3>
-        <p>I’m a student currently learning web development and actively seeking an internship opportunity. I have a strong interest in UX/UI design and focus on creating user-friendly applications that prioritize both the user experience and the purpose of the product.</p>
-    </div>
     <div class="skills">
         <h2>Skills</h2>
         <img src="img/html.png" alt ="HTML5 Logo">
@@ -20,18 +15,34 @@
         <img src="img/git.png" alt ="Git Logo">
         <img src="img/java.png" alt ="Java Logo">
     </div>
-    <div class="projects">
-        <h2>Projects</h2>
-        <h3>Personal Portfolio Website</h3>
-    </div>
-    <div class ="socials">
-        <h2>Socials</h2>
-        <a href="https://www.linkedin.com/in/hailie-jade-juliano-4b3b25223/" target="_blank">
-            <img src="img/linkedin.png" alt ="LinkedIn Logo">
-        </a>
-        <a href="https://github.com/hjuliano24" target="_blank">
-            <img src="img/github.png" alt ="GitHub Logo">
-        </a>
+    <div class="main-content">
+        <div class="top-section">
+            <div class="intro">
+                <h1>Hailie Jade Juliano</h1>
+                <h3>Aspiring Web Developer | Student</h3>
+                <p>I’m a student currently learning web development and actively seeking an internship opportunity. I have a strong interest in UX/UI design and focus on creating user-friendly applications that prioritize both the user experience and the purpose of the product.</p>
+            </div>
+            <img class="profile-pic" src="img/profile.jpg" alt ="Profile Picture">
+        </div>
+        <div class="bottom-section">
+            <div class="projects">
+                <h2>Projects</h2>
+                <h3>Personal Portfolio Website</h3>
+            </div>
+            <div class ="socials">
+                <h2>Socials</h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/hailie-jade-juliano-4b3b25223/" target="_blank">
+                        <img src="img/linkedin.png" alt ="LinkedIn Logo">
+                        <p>LinkedIn</p>
+                    </a>
+                    <a href="https://github.com/hjuliano24" target="_blank">
+                        <img src="img/github.png" alt ="GitHub Logo">
+                        <p>GitHub</p>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
