--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hailie's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="skills">
         <h2>Skills</h2>
-        <img src="img/html.png" alt ="HTML5 Logo">
-        <img src="img/css.png" alt ="CSS3 Logo">
-        <img src="img/javascript.png" alt ="JavaScript Logo">
-        <img src="img/git.png" alt ="Git Logo">
-        <img src="img/java.png" alt ="Java Logo">
+        <div class="skills-images">
+            <div class="skills-images-inner">
+                <img src="img/html.png" alt ="HTML5 Logo">
+                <img src="img/css.png" alt ="CSS3 Logo">
+                <img src="img/javascript.png" alt ="JavaScript Logo">
+                <img src="img/git.png" alt ="Git Logo">
+                <img src="img/java.png" alt ="Java Logo">
+                <!-- Duplicate images for seamless loop -->
+                <img src="img/html.png" alt ="HTML5 Logo">
+                <img src="img/css.png" alt ="CSS3 Logo">
+                <img src="img/javascript.png" alt ="JavaScript Logo">
+                <img src="img/git.png" alt ="Git Logo">
+                <img src="img/java.png" alt ="Java Logo">
+            </div>
+        </div>
     </div>
     <div class="main-content">
         <div class="top-section">
@@ -27,7 +40,14 @@
         <div class="bottom-section">
             <div class="projects">
                 <h2>Projects</h2>
-                <h3>Personal Portfolio Website</h3>
+                <div class="box">
+                    <div class="top-box">
+                        <div class = "box-button"></div>
+                    </div>
+                    <div class="bottom-box">
+                        <p>Personal Portfolio Website<p>
+                    </div>
+                </div>
             </div>
             <div class ="socials">
                 <h2>Socials</h2>
