--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray-50">
+    <!--
     <div class="skills">
         <h2>Skills</h2>
         <div class="skills-images">
@@ -19,7 +20,7 @@
                 <img src="img/javascript.png" alt ="JavaScript Logo">
                 <img src="img/git.png" alt ="Git Logo">
                 <img src="img/java.png" alt ="Java Logo">
-                <!-- Duplicate images for seamless loop -->
+        
                 <img src="img/html.png" alt ="HTML5 Logo">
                 <img src="img/css.png" alt ="CSS3 Logo">
                 <img src="img/javascript.png" alt ="JavaScript Logo">
@@ -28,6 +29,32 @@
             </div>
         </div>
     </div>
+    -->
+    <nav>
+        <button>About me</button>
+        <button>Project</button>
+        <button>Contact</button>
+    </nav>
+
+    <div id="Projects">
+        <div id="Project">
+            <h2> Intell Sustainability</h2>
+            <iframe class="aspect-video" src="https://hjuliano24.github.io/03-prj-intel-localization/"></iframe>
+            <button>Website</button>
+            <button>Repo</button>
+        </div>
+        <p>HTML CSS JavaScript</p>
+        <button>Previouse</button>
+        <button>Next</button>
+    </div>
+
+    <div id="AboutMe">
+        <div></div>
+        <img>
+        <h3>Hailie Jade Juliano</h3>
+        <p>(Text about me)</p>
+    </div>
+    <!--
     <div class="main-content">
         <div class="top-section">
             <div class="intro">
@@ -64,5 +91,6 @@
             </div>
         </div>
     </div>
+    -->
 </body>
 </html>
